Upgrade parent POM reference and adapt Docker setup